# hhh

./: .gitignore  Cargo.toml  Makefile  build-debug.ps1  build-debug.py  build.ps1  build.py  build1.sh  build2.sh  debug.gdb  debug.ps1  install.ps1  make.py  qemu-kernel.gdb  run.ps1  run.py
bootloader/: Cargo.toml
bootloader/.cargo/: config.toml
bootloader/src/: elf.rs  exceptions.rs  main.rs  panic.rs  writer.rs
common/: Cargo.toml
common/src/: lib.rs  writer.rs
kernel/: Cargo.toml  link.ld  target.json
kernel/.cargo/: config.toml
kernel/src/: exceptions.rs  graphics.rs  idt.rs  main.rs  memory.rs  pata.rs  pic.rs  ps2.rs  spinlock.rs  writer.rs
kernel/src/ps2/: keyboard.rs  keycodes.txt  mod.rs
kernel/src/usb/: mod.rs
kernel/src/usb/xhci/: datastructures.rs  mod.rs  register.rs
vgafontconverter/: Cargo.toml
vgafontconverter/src/: main.rs
