[package]
name = "bootloader"
version = "0.1.0"
authors = ["Elekrisk <einar.vilhelm.persson@example.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uefi = { version = "0.8", features = ["alloc", "logger", "exts"] }
uefi-services = "0.5"
rlibc = "1"
log = "0.4"
ucs2 = "0.3"
common = { path = "../common" }
