[package]
name = "bootloader"
version = "0.1.0"
authors = ["Elekrisk <einar.vilhelm.persson@example.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
wait_for_gdb = []

[dependencies]
uefi = { git = "https://github.com/rust-osdev/uefi-rs", features = ["alloc", "logger", "exts"] }
uefi-services = { version = "0.5", features = ["no_panic_handler"] }
rlibc = "1"
log = "0.4"
ucs2 = "0.3"
common = { path = "../common" }
x86_64 = { version = "0.14", features = ["inline_asm"] }
acpi = "2.3"