[package]
name = "kernel"
version = "0.1.0"
authors = ["Elekrisk <einar.vilhelm.persson@example.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic="abort"
lto = true

[profile.release]
panic="abort"
lto = true

[dependencies]
rlibc = "1"
common = { path = "../common" }
